--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 
 :root {
   --bgColor: #b40f30;
-  --bgColor2: #0f0909;
+  --bgColor2: #080b0f;
   --accentColor: #dfe0db;
   --font: "Karla", sans-serif;
   --delay: 0.3s;
